# Algoritmo_LZW

./: .gitignore  LZW.py  README.md  pyproject.toml
