[tool.poetry]
name = "lzw-image-compressor"
version = "0.1.0"
description = "Implementação do algoritmo LZW para compressão de imagens em escala de cinza"
authors = ["Seu Nome <seu.email@exemplo.com>"]
readme = "README.md"
packages = [{include = "LZW.py"}]

[tool.poetry.dependencies]
# Aceita Python 3.10, 3.11, 3.12 ou 3.13, mas PROÍBE o 3.14+
python = ">=3.10, <3.14"
Pillow = ">=10.0.0"

[tool.poetry.scripts]
lzw-compress = "LZW:executar_lzw_imagem"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"